--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keyword" content="gamer, comprar, tienda">
 
 </head>
-<body class="bg-dark">
+<body class="bg-primary">
     <header>   
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
