agragamos margin a inicio de sesion, cambie color de titulo y tambien utilice otra fuente de letras

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </header>
     <section class="encabezado encabezado__colores--fondo"> 
         <!--TITULO-->
-        <h1 class="encabezado__letra--padding">BM GAMESTORE</h1> 
+        <h1 class="encabezado__letra--padding"> <span class="encabezado__colores--letra"> BM GAMESTORE </span> </h1> 
     </section>
       <div class="ini ini__caja--fondo">
           <!--INICIO DE SESION-->
