--- a/PAGES/juegos.html
+++ b/PAGES/juegos.html
@@ -10,11 +10,11 @@
     <meta name="keyword" content="juegos, compra, tienda, argentina">
     
 </head>
-<body>
+<body class="bg-dark">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="../index.html">
                     <img src="../imagenes/BM GAMESTORE.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,10 +23,10 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                       <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="../index.html">INICIO</a>
+                        <a class="nav-link fs-5" aria-current="page" href="../index.html">INICIO</a>
                       </li>
                       <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" href="juegos.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle active fs-5" href="juegos.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 JUEGOS
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
@@ -37,15 +37,15 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="novedades.html">NOVEDADES</a>
+                        <a class="nav-link fs-5" href="novedades.html">NOVEDADES</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="consolas.html">CONSOLAS</a>
+                        <a class="nav-link fs-5" href="consolas.html">CONSOLAS</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="hardware.html">HARDWARE</a>
+                        <a class="nav-link fs-5" href="hardware.html">HARDWARE</a>
                       </li><li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+                        <a class="nav-link fs-5" href="nosotros.html">NOSOTROS</a>
                       </li>
                     </ul>
                     <form class="d-flex">
@@ -61,7 +61,8 @@
     <section class="encabezado encabezado__colores--fondo"> 
       <!--TITULO-->
       <h1 class="encabezado__letra--padding">JUEGOS</h1> 
-  </section>
+    </section>
+
     <section class="ordenTarjetas"> 
         <article class="cuerpoTarjeta">
              <div class="imagenTamanio">
@@ -75,14 +76,38 @@
                  <a href="#">COMPRAR</a>
              </div>
         </article>
+        <article class="cuerpoTarjeta">
+            <div class="imagenTamanio">
+                <!--IMAGENES DE JUEGOS-->     
+                <a href="farcry.html"> <img src="../imagenes/FAR-CRY-66.png" > </a>      
+            </div>
+            <!--PRECIOS-->
+            <div class="descripcion">
+                <h3> FAR CRY 6 </h3>   
+                <P>5000$</P>
+                <a href="#">COMPRAR</a>
+            </div>
+        </article>
+        <article class="cuerpoTarjeta">
+              <div class="imagenTamanio">
+                  <!--IMAGENES DE JUEGOS-->     
+                    <a href="farcry.html"> <img src="../imagenes/FAR-CRY-66.png" > </a>      
+              </div>
+              <!--PRECIOS-->
+              <div class="descripcion">
+                <h3> FAR CRY 6 </h3>   
+                <P>5000$</P>
+                <a href="#">COMPRAR</a>
+              </div>
+        </article>
  
-         <article class="cuerpoTarjeta">
+        <article class="cuerpoTarjeta">
               <!--IMAGENES DE JUEGOS -->
             <div class="imagenTamanio">
              <a href="eldenring.html"> <img src="../imagenes/ps5-elden-ring.jpg"> </a>
             </div>
  
-             <div class="descripcion">
+            <div class="descripcion">
                  <!--PRECIOS-->
                  <h3> ELDEN RING </h3> 
                  <p>5000$</p> 
