--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>   
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="imagenes/BM GAMESTORE.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,9 +23,9 @@
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
+                      <a class="nav-link active fs-5" aria-current="page" href="index.html">INICIO</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown fs-5">
                         <a class="nav-link dropdown-toggle" href="PAGES/juegos.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           JUEGOS
                         </a>
@@ -37,15 +37,15 @@
                       </ul>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="PAGES/novedades.html">NOVEDADES</a>
+                      <a class="nav-link fs-5" href="PAGES/novedades.html">NOVEDADES</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="PAGES/consolas.html">CONSOLAS</a>
+                      <a class="nav-link fs-5" href="PAGES/consolas.html">CONSOLAS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="PAGES/hardware.html">HARDWARE</a>
+                      <a class="nav-link fs-5" href="PAGES/hardware.html">HARDWARE</a>
                     </li><li class="nav-item">
-                      <a class="nav-link" href="PAGES/nosotros.html">NOSOTROS</a>
+                      <a class="nav-link fs-5" href="PAGES/nosotros.html">NOSOTROS</a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -79,14 +79,17 @@
       </div>
       <div class="container bg-primary p-2 bg-opacity-75">
         <div class="row">
-          <div class="col-sm-2" >
-            <h4 class="destacado destacado__letra text-start bg-success p-2  bg-opacity-75">
-              Destacados 
-               <span class="fw-bold">GAMING </span> 
-            </h4>
+          <div class="container justify-content-evenly">
+           <span class="d-flex justify-content-evenly"> 
+              <h4 class="destacado destacado__letra bg-success p-2  bg-opacity-75 h-100 d-inline-block">
+                  Destacados 
+                <span class="fw-bold">GAMING </span> 
+              </h4>
+           </span> 
           </div>
-          <div class="col-sm-10">
-            <section class="ordenTarjetas"> 
+          <div class="col-sm-12">
+            
+            <section class="ordenTarjetas d-flex justify-content-evenly"> 
            
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
