--- a/PAGES/consolas.html
+++ b/PAGES/consolas.html
@@ -11,11 +11,11 @@
     <meta name="keyword" content="gamer, comprar, tienda, consolas">
 </head>
 
-<body>
+<body class="bg-dark">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="../index.html">
                         <img src="../imagenes/BM GAMESTORE.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,10 +24,10 @@
                     <div class="collapse navbar-collapse" id="navbarScroll">
                         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                             <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="../index.html">INICIO</a>
+                            <a class="nav-link fs-5" aria-current="page" href="../index.html">INICIO</a>
                             </li>
                             <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="juegos.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle fs-5" href="juegos.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             JUEGOS
                             </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
@@ -38,15 +38,15 @@
                         </ul>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="novedades.html">NOVEDADES</a>
+                        <a class="nav-link fs-5" href="novedades.html">NOVEDADES</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link active" href="consolas.html">CONSOLAS</a>
+                        <a class="nav-link active fs-5" href="consolas.html">CONSOLAS</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="hardware.html">HARDWARE</a>
+                        <a class="nav-link fs-5" href="hardware.html">HARDWARE</a>
                         </li><li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+                        <a class="nav-link fs-5" href="nosotros.html">NOSOTROS</a>
                         </li>
                         </ul>
                         <form class="d-flex">
@@ -77,6 +77,32 @@
                      <a href="#">COMPRAR</a>
                  </div>
             </article>
+
+            <article class="cuerpoTarjeta">
+                <div class="imagenTamanio">
+                    <!--IMAGENES DE JUEGOS-->     
+                    <a href="ps5.html"> <img src="../imagenes/consolas/ps5.jpg"> </a>      
+                </div>
+                <!--PRECIOS-->
+                <div class="descripcion">
+                   <h4>PlayStation 5 825GB Digital Edition </h4>  
+                    <P>5000$</P>
+                    <a href="#">COMPRAR</a>
+                </div>
+            </article>
+           <article class="cuerpoTarjeta">
+                <div class="imagenTamanio">
+                    <!--IMAGENES DE JUEGOS-->     
+                    <a href="ps5.html"> <img src="../imagenes/consolas/ps5.jpg"> </a>      
+                </div>
+                <!--PRECIOS-->
+                <div class="descripcion">
+                <h4>PlayStation 5 825GB Digital Edition </h4>  
+                    <P>5000$</P>
+                    <a href="#">COMPRAR</a>
+                </div>
+           </article>
+
             <article class="cuerpoTarjeta">
                  <div class="imagenTamanio">
                      <!--IMAGENES DE JUEGOS-->     
