--- a/PAGES/eldenring.html
+++ b/PAGES/eldenring.html
@@ -10,13 +10,13 @@
     <meta name="description" content="Compra Elden Ring a 5000 pesos efectivo">
     <meta name="keyword" content="compra, Elden Ring">
 </head>
-<body>
+<body class="bg-dark">
   <header>
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                  <img src="imagenes/BM GAMESTORE.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
+              <a class="navbar-brand" href="../index.html">
+                  <img src="/imagenes/BM GAMESTORE.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -24,10 +24,10 @@
               <div class="collapse navbar-collapse" id="navbarScroll">
                   <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                      <a class="nav-link active fs-5" aria-current="page" href="../index.html">INICIO</a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="juegos.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <a class="nav-link dropdown-toggle fs-5" href="juegos.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           JUEGOS
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
@@ -38,15 +38,15 @@
                       </ul>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="novedades.html">NOVEDADES</a>
+                      <a class="nav-link fs-5" href="novedades.html">NOVEDADES</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="consolas.html">CONSOLAS</a>
+                      <a class="nav-link fs-5" href="consolas.html">CONSOLAS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="hardware.html">HARDWARE</a>
+                      <a class="nav-link fs-5" href="hardware.html">HARDWARE</a>
                     </li><li class="nav-item">
-                      <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+                      <a class="nav-link fs-5" href="nosotros.html">NOSOTROS</a>
                     </li>
                   </ul>
                   <form class="d-flex">
@@ -65,7 +65,6 @@
     <!-- IMAGEN Y CONTENIDO -->
     <section class="producto">
         <div class="producto producto__fondo">
-        <h1> ELDEN RING-PS4 </h1>
         <span> <img src="../imagenes/ps5-elden-ring.jpg" width="275" ></span> 
         <h2> 5000$ </h2>
         </div>
@@ -84,7 +83,7 @@
                
         <div class="producto producto__fondo">
             <h2>Trailer: </h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/2Ri_a70HWMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           <span class="d-flex justify-content-center"> <iframe width="560" height="315" src="https://www.youtube.com/embed/2Ri_a70HWMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </span> 
 
         </div>
     </section>
