comiteo normal borre codigo

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     
     <div>
                 <!--ICONOS DE CONTACTOS-->
-        <img src="imagenes/facebook.png" class=" facebook-tamanio margin-Icon">
+        <img src="imagenes/facebook.png" class=" facebook-tamanio margin-Icons">
         <img src="imagenes/ìnstagram.png" class=" instagra-tamanio margin-Icon">
         <img src="imagenes/whatsapp.png" class="contacto-tamanio margin-Icon">
         
