--- a/PAGES/farcry.html
+++ b/PAGES/farcry.html
@@ -15,7 +15,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img src="/imagenes/BM GAMESTORE.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
+                <img src="../imagenes/BM GAMESTORE.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -60,7 +60,7 @@
     <section class="encabezado encabezado__colores--fondo"> 
       <!--TITULO-->
       <h1 class="encabezado__letra--padding">Farcry 6</h1> 
-  </section>
+    </section>
     <!-- IMAGEN Y CONTENIDO -->
     <section class="producto">
         <div class="producto producto__fondo">
@@ -83,7 +83,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/IYoya-4DCbs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         </div>
-</section>
+    </section>
 
 <footer>
   <ul class="container-fluid footer ">
